--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 ﻿BOT_TOKEN=8030737600:AAGvqHyrIEVHWAYUc5RH3aX6UCkVMzWNRLg
-WEBHOOK_BASE=https://retouch-bot.up.railway.app
+WEBHOOK_BASE=https://web-production-375c7.up.railway.app
