--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,23 @@
 .env
 __pycache__/
 *.pyc
-*.log
-*.db
-temp_*
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+ENV/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
